# os-labs

./: .gitignore  helpers
common/: CMakeLists.txt  defines.h  sub.c  sub.h  tests.c
common/cpp/: ArgsParser.cpp  ArgsParser.hpp  threads.hpp
lab1/: CMakeLists.txt
lab2/: CMakeCache.txt  CMakeLists.txt
lab2/src/: main.c  slave.c  sub.h
lab3/: CMakeLists.txt
lab3/src/: main.c  main.cpp  worker.cpp
lab4/: CMakeLists.txt
lab4/src/: main.c  slave.c
lab5/: CMakeLists.txt
lab5/src/: main.cpp
lab5/src/libs/: areas.cpp  areas.hpp  primes.cpp  primes.hpp
lab678/: CMakeLists.txt
lab678/src/: core.cpp  main.cpp  node.cpp
